[package]
name = "betbook"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
rusqlite_migration = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
actix-files = "0.6.6"
google-oauth = { version = "1.11" }
config = "0.14.0"


[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
